--- a/Calendario_interactivo/index.html
+++ b/Calendario_interactivo/index.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #cont{
+            margin: 20px auto;
+            height: auto;
+            width: 200px;
+            padding: 20px;
+            border-radius: 20px;
+            box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.257);
+            display: flex;
+            flex-direction: column;
+        }
+
+        select{
+            margin-top: 10px;
+            background-color: aquamarine;
+            border: none;
+
+        }
+        label{
+            margin-top: 10px;
+
+        }
+    </style>
 </head>
 <body onload="cargar()">
     <div id="cont">
