--- a/Mega_Calendario/index.html
+++ b/Mega_Calendario/index.html
@@ -5,72 +5,116 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        /* styles.css */
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #2c3e50, #3498db);
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    min-height: 100vh;
-    color: #fff;
-}
+   <style>
+    /* ========= RESET ========= */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-#cont {
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
-    padding: 2rem;
-    border-radius: 20px;
-    margin-top: 4rem;
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
-    text-align: center;
-}
+    body {
+      font-family: "Inter", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #1e293b, #0f172a);
+      color: #e2e8f0;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 2rem;
+    }
 
-#fecha {
-    padding: 0.5rem 1rem;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    margin-bottom: 1rem;
-    font-size: 1rem;
-}
+    /* ========= CONTAINER ========= */
+    #cont {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(20px);
+      border-radius: 24px;
+      padding: 2.5rem;
+      box-shadow: 0 8px 40px rgba(0, 0, 0, 0.6);
+      width: 95%;
+      max-width: 1200px;
+      animation: fadeIn 1s ease;
+    }
 
-.semana {
-    font-size: 1.2rem;
-    margin: 1rem 0;
-    font-weight: bold;
-    letter-spacing: 1px;
-}
+    /* ========= SELECT ========= */
+    #fecha {
+      appearance: none;
+      background: rgba(255, 255, 255, 0.08);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      color: #f8fafc;
+      padding: 0.7rem 2.5rem 0.7rem 1rem;
+      border-radius: 12px;
+      font-size: 1rem;
+      margin-bottom: 2rem;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      position: relative;
+    }
 
-.calendario {
-    border-collapse: collapse;
-    width: 100%;
-    margin: 1rem;
-}
+    #fecha:hover {
+      background: rgba(255, 255, 255, 0.15);
+    }
 
-.calendario td {
-    border-radius: 50%;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    padding: 1rem;
-    text-align: center;
-    transition: background 0.3s ease, transform 0.2s;
-    font-weight: bold;
-    cursor: pointer;
-}
+    /* ========= CALENDARIOS ========= */
+    #Calendarios {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+    }
 
-.calendario td:hover {
-    background: rgba(255, 255, 255, 0.2);
-    transform: scale(1.1);
-}
-.sem{
-    font-weight: bolder;
-    background-color: rgba(12, 12, 12, 0.594);
-}
+    .calendario {
+      border-collapse: collapse;
+      width: 100%;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.03);
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
 
-    </style>
+    .calendario:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 6px 30px rgba(0, 0, 0, 0.45);
+    }
+
+    .calendario td {
+      padding: 0.9rem;
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+
+    .calendario td:hover {
+      background: rgba(255, 255, 255, 0.15);
+      transform: scale(1.08);
+      border-radius: 50%;
+    }
+
+    .sem {
+      font-weight: bolder;
+      background: rgba(15, 23, 42, 0.7);
+      color: #38bdf8;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    /* ========= ANIMATIONS ========= */
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
 <script src="index.js"></script>
 
