solucion de examen

--- a/Convercion_monedas/index.html
+++ b/Convercion_monedas/index.html
@@ -158,6 +158,11 @@
     border-radius: 50%;
     cursor: pointer;
 }
+.Eq select{
+    background-color: #0f172ac3;
+ border: none;
+    color: #93c5fd;
+}
 </style>
 <body>
      <h1>💱 Conversor de Monedas</h1>
